--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                   Issues
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Fall 2019</a>
-                  <a class="dropdown-item" href="#">Winter 2019</a>
-                  <a class="dropdown-item" href="#">Fall 2018</a>
+                  <a class="dropdown-item" href="/fall-2019.html">Fall 2019</a>
+                  <a class="dropdown-item" href="/winter-2019.html">Winter 2019</a>
+                  <a class="dropdown-item" href="/fall-2018.html">Fall 2018</a>
                 </div>
             </li>
           </ul>
@@ -39,15 +39,17 @@
     <body>
         <div class='page'>
         <div class="item">
-            <img src="48273884556_b624fbfb6e_b.jpg">
+            <img src="/images/48273884556_b624fbfb6e_b.jpg">
         </div> 
         <h2>"Japanese constitutional scroll" by mwmosser is licensed under CC BY-NC-SA 2.0 </h2>
         <h1>JDP Journal of Philosophy</h1>
+        <hr/>
         <p>
             The JDP Journal of Philosophy is now publishing online as of January 31, 2020.
-            Uploaded are the articles published since the Fall of 2018 issue.
-            Forthcoming articles will be published here for convenience.
+            Uploaded are the major articles for each publication since the Fall 2018 issue.
+            Each publication in its entirety along with forthcoming articles will be published on this website for convenience.
         </p>
+        <div class="bottom-space"></div>
         </div>
     </body>
 
@@ -55,7 +57,6 @@
     <div class="footer">
         <div class="bottom">
             <a>Contact:</a>
-            <a>208-715-4339</a>
             <a href="https://github.com/JonathanPulsipher/creativeproject1.git">github.com</a>
         </div>
     </div>
